--- a/CantStop/.settings/org.eclipse.wst.common.component
+++ b/CantStop/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/utils"/>
         <property name="context-root" value="CantStop"/>
         <property name="java-output-path" value="/CantStop/bin"/>
     </wb-module>
